src/test/ui/nll/issue-67007-escaping-data.stderr
error: lifetime may not live long enough
  --> $DIR/issue-67007-escaping-data.rs:17:21
   |
LL | impl<'tcx> Consumer<'tcx> {
   |      ---- lifetime `'tcx` defined here
LL |     fn bad_method<'a>(&self, fcx: &FnCtxt<'a, 'tcx>) {
   |                   -- lifetime `'a` defined here
LL |         let other = self.use_fcx(fcx);
   |                     ^^^^^^^^^^^^^^^^^ argument requires that `'a` must outlive `'tcx`
   |
   = help: consider adding the following bound: `'a: 'tcx`

error: aborting due to previous error

